Fix scroll jump voting budget investments
Removing the padding in the investments header nav bar means it doesn't
leave any empty space when its position changes to a fixed one.

--- a/app/assets/stylesheets/participation.scss
+++ b/app/assets/stylesheets/participation.scss
@@ -1581,7 +1581,6 @@
 }
 
 .progress-bar-nav {
-  padding: $line-height 0;
   position: relative;
   z-index: 3;
 
